大枠だけ作成

--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>miyoshi</title>
+    <title>株式会社 ミヨシ</title>  
+    <meta name="description" content="株式会社 ミヨシ   公式サイト">
 
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <div class="top-view"></div>
+        <div class="contact-container"></div>
+        <div class="service-container"></div>
+        <div class="works-container"></div>
+        <div class="corporate-container"></div>
+    </main>
+    <footer></footer>
 </body>
 </html>
