corporateまで概形だけ

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>株式会社 ミヨシ</title>  
     <meta name="description" content="株式会社 ミヨシ   公式サイト">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/reset.css">
@@ -12,11 +13,70 @@
 <body>
     <header></header>
     <main>
-        <div class="top-view"></div>
-        <div class="contact-container"></div>
-        <div class="service-container"></div>
-        <div class="works-container"></div>
-        <div class="corporate-container"></div>
+        <!-- トップ画面 -->
+        <div class="top-container">
+            <div class="top-wrap">
+            </div>
+            <h1>解体のこと、<br>お任せください。</h1>
+        </div>
+
+        <!-- お問い合わせ -->
+        <div class="contact-container">
+            <div class="contact-top">
+                <p>ご相談・現地調査・お見積りは無料です。<br>お気軽にお問い合わせください。</p>
+            </div>
+            <div class="contact-bottom">
+                <p>TEL. 080-9999-9999</p>
+                <div class="green-btn">
+                    <a href=""><span>ご相談・お問い合わせ</span></a>
+                </div>
+            </div>
+        </div>
+
+        <!-- サービス -->
+        <div class="service-container">
+            <span class="middle-wrap">
+                <h1>Service</h1>
+                <p>ビルやマンションなどの大規模解体から木造住宅の解体、内装解体、スケルトン、アスベスト除去、廃棄物運搬まで、解体工事に関するあらゆる業務に対応しております。</p>
+                <div class="white-btn">
+                    <a href=""><span>業務内容</span></a>
+                </div>
+            </span>
+        </div>
+
+        <!-- 施工事例 -->
+        <div class="works-container">
+            <div class="works-top-container">
+                <div class="works-top">
+                    <h1>Works</h1>
+                </div>
+                <div class="works-middle">
+                    <div class="green-btn">
+                        <a href=""><span>施工事例</span></a>
+                    </div>
+                    <p>解体工事専門業者として、累計5000件以上の施工実績がございます。是非、私たちが施工した解体工事をご覧ください。</p>
+                </div>
+            </div>
+            <div class="works-bottom">
+                <div class="picture-container"><img src="" alt=""></div>
+                <div class="picture-container"><img src="" alt=""></div>
+                <div class="picture-container"><img src="" alt=""></div>
+            </div>
+        </div>
+
+        <!-- 会社情報 -->
+        <div class="corporate-container">
+            <span class="middle-wrap">
+                <h1>Corporate</h1>
+                <p>ミヨシは、2007年1月に東京都荒川区で創業。建設業許可を取得している解体工事業者です。東京都、神奈川県、埼玉県、千葉県で解体工事を行っております。</p>
+                <div class="white-btn">
+                    <a href=""><span>会社情報</span></a>
+                </div>
+            </span>
+        </div>
+
+        <!-- 採用情報 -->
+        <div class="recruit-container"></div>
     </main>
     <footer></footer>
 </body>
