いったんここまで

--- a/index.html
+++ b/index.html
@@ -76,8 +76,55 @@
         </div>
 
         <!-- 採用情報 -->
-        <div class="recruit-container"></div>
+        <div class="recruit-container">
+            <div class="recruit-top">
+                <div class="green-big-btn">
+                    <a href="">
+                        <h2>Recruit</h2>
+                        <span>採用情報</span>
+                    </a>
+                </div>
+                <div class="green-big-btn">
+                    <a href="">
+                        <h2>Contact</h2>
+                        <span>お問い合わせ</span>
+                    </a>
+                </div>
+            </div>
+            <div class="recruit-bottom">
+                <div class="slider">
+                    <div class="slider-track">
+                      <img src="./assets/img/kaitai4.jpg" alt="image1">
+                      <img src="./assets/img/kaitai5.jpg" alt="image2">
+                      <img src="./assets/img/kaitai6.jpg" alt="image3">
+                      <img src="./assets/img/kaitai7.jpg" alt="image4">
+                      <!-- 同じ画像セットをもう一度繰り返す -->
+                      <img src="./assets/img/kaitai4.jpg" alt="image1">
+                      <img src="./assets/img/kaitai5.jpg" alt="image2">
+                      <img src="./assets/img/kaitai6.jpg" alt="image3">
+                      <img src="./assets/img/kaitai7.jpg" alt="image4">
+                    </div>
+                  </div>
+            
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-top">
+            <a href="">業務内容</a>
+            <a href="">施工事例</a>
+            <a href="">会社情報</a>
+            <a href="">採用情報</a>          
+        </div>
+        <div class="footer-bottom">
+            <h2>株式会社 ミヨシ</h2>
+            <h4>〒379-2203
+                群馬県伊勢崎市曲沢町1234</h4>
+            <h4>TEL. 
+                0270-61-6422
+                FAX. 
+                0270-616423</h4>
+        </div>
+    </footer>
 </body>
 </html>
